<resources>
    <!--Titres-->
    <string name="app_name">Bataille Navale</string>
    <string name="MenuTitle">Menu</string>

    <!--Choix du menu-->
    <string name="PlayButton">Jouer</string>
    <string name="MultiButton">Multijoueurs</string>
    <string name="SettingsButton">Options</string>
    <string name="CloseButton">Quitter</string>

    <!--Boutons redondants-->
    <string name="ReturnButton">◄</string>
    <string name="NextButton">Suivant</string>
    <string name="LunchButtonText">Tirer!</string>

    <!--propre à chaque joueurs-->
    <string name="Player1">Joueur 1</string>
    <string name="Player2">Joueur 2</string>
    <string name="ColorPlayer1">Couleur du joueur 1</string>
    <string name="ColorPlayer2">Couleur du joueur 2</string>

    <string name="returnAlert">Êtes-vous sûre de vouloir retourner au menu ?</string>
    <string name="returnYes">Oui</string>
    <string name="returnNo">Non</string>
    <string name="returnOk">OK</string>

    <string name="touch">Touché !</string>
    <string name="cast">Coulé !!</string>
    <string name="missed">Raté</string>

    <string name="startMessage1">C\'est </string>
    <string name="startMessage2"> qui commence !</string>
    <string name="playMessage1">C\'est à </string>
    <string name="playMessage2"> de jouer</string>

    <string name="WinMessage"> à Gagné</string>
    <string name="statsNbrHit">Nombre de coups :</string>
    <string name="statsHitList">Liste des coups :</string>
    <string name="statsTime">Durée de la partie :</string>

    <!--Barre se trouvant dessus le nom du joueur donnant un indice sur ce que doit faire le joueur-->
    <string name="InputNamePlayer1">Nom du premier joueur</string>
    <string name="InputNamePlayer2">Nom du deuxième joueur</string>
    <string name="NoTextPlaced">Veuillez entrer votre nom !</string>
    <string name="SetShipHelpMessagePlayerStart">C\'est à</string>
    <string name="SetShipHelpMessagePlayerEnd">de placer ses bateaux</string>

    <!--Multijoueurs-->
    <string name="WaitPlayer">Attente d\'un autre joueur</string>
    <string name="DecoPlayer">Votre adversaire s\'est déconnecté.</string>
    <string name="defaultServerURL">http://192.168.4.148:8080</string>
    <string name="Timeout">Délai de connexion dépassé</string>

    <string name="startMessageYou">C\'est vous qui commencez !</string>
    <string name="playMessageYou">C\'est à vous de jouer</string>
    <string name="startMessageHim">C\'est lui qui commence !</string>
    <string name="playMessageHim">C\'est à votre adversaire de jouer</string>

    <!--Noms des couleurs-->
    <string name="colorRed">Rouge</string>
    <string name="colorYellow">Jaune</string>
    <string name="colorGreen">Vert</string>
    <string name="colorBlue">Bleu</string>

</resources>
